# fast-sqlite3-inserts

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  bench.sh  busy.sh  busy_loop.py  cargo_build.sh  commons.py  load.sql  naive.py  naive_batched.py  sqlite3_opt.py  sqlite3_opt_batched.py  threaded_batched.py
.cargo/: config
.circleci/: config.yml
.github/workflows/: bench.yaml  github-actions-demo.yml
migrations/: 20210509094817_create_user_table.sql
sqlite3/: compile.sh
sqlite3-binding/: Cargo.toml
sqlite3-binding/.cargo/: config
sqlite3-binding/src/: lib.rs
src/: lib.rs
