[package]
name = "fast-sqlite3-inserts"
version = "0.1.0"
authors = ["avi <hi@avi.im>"]
edition = "2018"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[features]
async-sql = ["sqlx", "tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sqlx = { version = "0.5.2", features = ["runtime-tokio-native-tls", "sqlite"], optional = true }
tokio = { version = "1.5.0", features = ["full"], optional = true }
rand = "0.8.3"
num_cpus = "1.0"
rusqlite = { version = "0.25.3", default-features = false, features = ["buildtime_bindgen"] }
